Edit other isomorphic keyboards, the practice routine, and reflection #1

--- a/source/articles/the-practice-routine.html.md.erb
+++ b/source/articles/the-practice-routine.html.md.erb
@@ -11,128 +11,65 @@
 
 ## Developing the curriculum
 
-I want to test the keyboards with three main domains
-of musical prowess: fundamentals, sight reading, and playing by ear.
-Fundamentals is the ability of the pianist to play musical patterns,
-while sight reading and playing by ear are more about how the pianist
-determines what to play given the input of written or sounded music.
+I'm going to test the keyboards' playability across the three main domains of musical prowess: fundamentals, sight reading, and playing by ear. Fundamentals is the ability of the pianist to play musical patterns. Sight reading and playing by ear are how the pianist determines what to play given the input of written or sounded music.
 
-When choosing the exercises to practice, I take a couple things into consideration. I value exercises that are in canon or popular, as I don’t want to practice things that are wildly different from what is standard. I also want content that is somewhat diverse so I can exercise and evaluate different skills. Focusing on one type of exercise could highlight certain weaknesses of a keyboard but would create blind spots in my assessments.
+When choosing the exercises to practice, I take a couple things into consideration. I value exercises that are popular, as I don’t want to practice things that are wildly different from what is standard. I also want content that is somewhat diverse so I can exercise and evaluate different skills. Varied content will help ensure that there aren't blind spots in my assessment.
 
 ### Fundamentals
 
-Taking these values into consideration, for the fundamentals I chose to practice scales and arpeggios, Hanon: The Virtuoso Pianist
-in Sixty Exercises, and Slonimsky's Thesaurus of Scales and Musical
-Patterns.
+For the fundamentals I chose to practice scales and arpeggios, Hanon: The Virtuoso Pianist in Sixty Exercises, and Slonimsky’s Thesaurus of Scales and Musical Patterns.
 
-Scales and the arpeggios were the easiest decision, as they the most
-standard set of exercises. I'm going to be practicing major, melodic
-minor, harmonic minor, and natural minor scales in two octaves, and
-major and minor arpeggios.
+It was an easy decision to choose scales and the arpeggios, as they the most standard set of exercises. I’m going to be practicing major, melodic minor, harmonic minor, and natural minor scales in two octaves, and major and minor arpeggios.
 
-It was also easy to choose to practice Hanon. It is also a very popular
-set of exercises, and Hanon will help me determine how difficult it will
-be to achieve equitable finger agility on the LIK. Unlike scales, the
-LIK will have no transpositional advantage, and will probably be
-disadvantaged, as almost all of the exercises in the book are in the key
-of C major, which should make it easier on the traditional keyboard.
+It was also easy to choose to practice Hanon. It is a very popular set of exercises, and Hanon will help me determine how difficult it will be to achieve finger agility on the LIK. Unlike scales, the LIK will have no transpositional advantage. Almost all the exercises in the book are in the key of C major, which should make it comparatively easier on the traditional keyboard. 
 
-The last set of exercises by Slonimsky is one that I find fascinating.
-Chosen for its unique content rather than popularity, the Thesaurus
-should do well to expose technical limitations on either keyboard. If
-there was any content that is not written for the traditional keyboard,
-it would be the Thesaurus.
+The last set of exercises by Slonimsky is one that I find fascinating. It is a collection of musical phrases and scales, many of which Slonimsky generated with a mathematical approach.  Because it wasn't written for the TK, as the Thesaurus could expose technical limitations on either keyboard. 
 
 ### Sight Reading and Playing By Ear
 
-Sight reading and playing by ear are difficult to find exercises for as
-they have the unique challenge of being unrepeatable. The second time
-sight reading or playing a piece of music by ear will be easier than the
-first, the performer will have familiarity with it the second time
-through. Thus it is unfair to compare two keyboards with the same music.
-For parity, the content must be new.
+Sight reading and playing by ear are difficult to find exercises for as they have the unique challenge of being unrepeatable. The second time sight reading a piece of music is easier than the first as it is more familiar. The same can be said for playing by ear. It is unfair to compare two keyboards with the same music. For parity, the content must be new.
 
-EarMaster 7 is software that addresses this problem, as it generates
-music to be sight read or played by ear from predefined parameters. This
-allows me to practice music that has a general difficulty that is
-completely unique. The software isn't perfect, (I would like to practice sight reaing with chords) but it's what I'm going
-to work with for the moment.
+EarMaster 7 is software that addresses this problem. It generates music from predefined parameters that can then be sight read or played by ear. This allows me to practice music with a rough level of difficulty that is completely unique. The software isn’t perfect (I would like to practice sight reaing with chords), but it’s what I’m going to work with for the moment.
 
 ## Method of practicing
 
-I will practice each set of exercises for the same amount of time (and
-thus each domain of musical prowess for the same amount of time), but I
-won't force myself to practice the same exercise for the same amount of
-time, so each keyboard will be allowed to improve at its own pace. I'm
-going to be alternating the order that I play the keyboards if I play
-both keyboards in the same day to avoid a potentially confounding
-variable.[^1]
+I will practice each set of exercises for the same amount of time (and thus each domain of musical prowess for the same amount of time). But I won’t force myself to practice the same exercise for the same amount of time. This will allow each keyboard to improve at its own pace. I’m going to alternate the order I play the keyboards if I play both on the same day. This is to avoid a potentially confounding variable.[^1]
 
-I have broken up each exercises into a set of incrementing difficulties. For fundamentals this means increasing tempo. The increments are created from my metronome markings, which are increase the speed by about 2-4%. Sight reading and playing by ear is a little bit more complex as increments can change the ambitus and largest intervals as well as the tempo.
+I have broken up each exercises into a set of incrementing difficulties. For fundamentals this means increasing tempo. I created increments from metronome markings, which increase the speed by about 2-4%. Sight reading and playing by ear have more complex increments as the the ambitus and largest intervals can change as well as the tempo. 
 
 ## An imperfect, malleable practice routine
 
-There is content that I would like to assess that this is missing from
-the curriculum. Notably, I'm not going to be practicing chords at all,
-and I think that it will be a necessary addition in the future. I also
-might want to compare the keyboards using real songs, etudes, or solos
-in the future.
+There is content that I would like to assess that this is missing from the curriculum. Notably, I’m not going to be practicing chords at all. I also will want to compare the keyboards using real songs, etudes, or solos in the future.
 
-Changing the exercises midway through the experiment will complicate the
-results of the experiment. The rate of improvement is best measured with
-increments that both keyboards practiced (as it removes the confounding
-variable of measuring with increments that can have varying difficulty), and switching exercises will all but ensure that there are unpracticed increments on one of the keyboards.
+Changing the exercises midway through the experiment will complicate the results. The rate of improvement is best measured with increments that both keyboards practiced (as it removes the confounding variable of increments of varying difficulty). Switching exercises will all but ensure that there are increments left unpracticed on one of the keyboards. 
 
-However, I do not think that this will completely spoil the data from
-the experiment, and it is better than the alternative of an immutable
-curriculum. The content of the practice sessions will have to change
-over time to accommodate my improvement as well as my initial mistakes
-in choosing content. I am not going to pursue the ideal of a static,
-unimprovable practice routine in favor of a dynamic practice routine
-with imperfect results.
+However, I do not think that this will spoil the data from the experiment, and it is better than the alternative of an immutable curriculum. The content of the practice sessions will eventually have to change to accommodate my improvement as well as initial mistakes in choosing content. Instead of a static and unimprovable practice routine, we'll have a dynamic practice routine with imperfect results.
 
 ## The curriculum
 
-After all this deliberation over what I would practice, here is the
-schedule I came up with:
+After all this deliberation over what I would practice, here is the schedule I came up with:
 
--   5 minutes of scales and arpeggios
+*   5 minutes of scales and arpeggios
+*   5 minutes of Hanon
+*   5 minutes of the Thesaurus of Scales and Musical Patterns
+*   10 minutes of sight reading
+*   10 minutes of playing by ear
 
--   5 minutes of Hanon
+**Edit from 4/29/19:** And I never actually practiced that curriculum. I changed the curriculum for my first practice session, and after a few sessions I have settled with this schedule:
 
--   5 minutes of the Thesaurus of Scales and Musical Patterns
+*   15 minutes of scales and arpeggios
+*   15 minutes of Hanon
+*   15 minutes of sight reading
+*   15 minutes of playing by ear
 
--   10 minutes of sight reading
-
--   10 minutes of playing by ear
-
-**Edit from 4/29/19**: And I never actually practiced that curriculum. I changed the curriculum for my first practice session, and after a few sessions I have settled with this schedule:
-
--   15 minutes of scales and arpeggios
-
--   15 minutes of Hanon
-
--   15 minutes of sight reading
-
--   15 minutes of playing by ear
-
-I have been practicing considerably more than I initially planned, so I
-now play each keyboard for an hour. On top of this, I am not practicing
-the Thesaurus. Although it is one of the more interesting exercise sets, I
-realized how little time fifteen minutes is (let alone five), and I
-concluded that I should put this valuable time towards scales and Hanon
-instead.
+I have been practicing more than I planned, so I now play each keyboard for an hour. I am also not practicing the Thesaurus. Although it is one of the more interesting exercise sets, I realized how little time fifteen minutes is (let alone five), and concluded that I should put this time towards scales and Hanon instead.
 
 ## Conclusion
 
-I chose exercises to asses fundamentals, sight reading, and playing by
-ear with reputation and diversity in mind. I recognize that
-the chosen content isn't perfect or complete, so I fully expect the
-curriculum to change throughout the experiment.
+I chose exercises to asses fundamentals, sight reading, and playing by ear with popularity, and diversity in mind. I recognize that the chosen content isn’t perfect or complete, so I expect the curriculum to change throughout the experiment. And just a few practice sessions in, it already has.
 
-I am using this [Airtable](https://airtable.com/shrjk2lTpQWFpgd26) to keep track of all of my improvement. You can find all of the exercises and all of the increments there. You can find the recording for any practice session [here](https://mega.nz/#F!DPpURACa!FXS_QgmHHKKOW-PCa_wI3A). You can also keep track of my practice sessions from [the practice session section of this site](https://linearisomorphickeyboard.io/practice-sessions).
+I am using this [Airtable](https://airtable.com/shrjk2lTpQWFpgd26) to keep track of all my improvement. You can find all the exercises and increments there. You can find the recording for any practice session [here](https://mega.nz/#F!DPpURACa!FXS_QgmHHKKOW-PCa_wI3A). You can also keep track of my practice sessions from [the practice session section of this site](https://linearisomorphickeyboard.io/practice-sessions).
 
-
-[^1]: There is a potential confounding variable in the order that I practice the keyboards if I practice both in the same day. If I always play the LIK first and the TK second, the LIK might benefit from my mind being fresh, or the TK might benefit from me already being warmed up. I am going to keep track of each time I practice both keyboards in one day, so the next time I practice both keyboards I can alternate the order.
+[^1]: There is a potential confounding variable in the order that I practice the keyboards when I practice both in the same day. If I always play the LIK first and the TK second, the LIK might benefit from my mind being fresh, or the TK might benefit from me being warmed up. I am going to keep track of each time I practice both keyboards in one day, so I can alternate which I play first.
 
 <% end %>
