--- a/source/reflections/reflection-1.html.md.erb
+++ b/source/reflections/reflection-1.html.md.erb
@@ -7,42 +7,42 @@
 
 <% partial "/partials/article-layout" do %>
 
-# Reflection #1: The Assessment
+# Reflection #1: The Assessment 
 
-The initial assessment was an enlightening comedy of errors. In my efforts to get the experiment underway the initial assessment was done hastily, causing several small mistakes, as well as a blunder that was as interesting as it was humbling.
+The initial assessment was an enlightening comedy of errors. In my efforts to get the experiment underway, I sped through the initial assessment. This caused several small mistakes, as well as a blunder that was as interesting as it was humbling.
 
 ## The small mistakes
 
-In an effort to get the ball rolling, I practiced the major, harmonic minor, and melodic minor scale on the traditional keyboard (TK) on July 8th. It was premature, as I would only complete the framework for practicing and publishing results four months later. Mistakes peppered the initial assessment from lack of preparation and because I was doing something relatively complex for the first time. I practiced hands apart before practicing hands together, which I no longer include as a metric.[^1] I didn't give myself much of an opportunity to learn whatever I was testing myself on. My notation of my accomplishments was poor, and I was keeping track of what I would practice, not what I was able to do.[^2]
+On July 8th I practiced the major, harmonic minor, and melodic minor scale on the traditional keyboard (TK). It was premature, as I would only complete the framework for practicing and publishing results four months later. Mistakes peppered the initial assessment due to lack of preparation. I practiced hands apart before practicing hands together, which I no longer include as a metric.[^1] I didn’t give myself much of an opportunity to learn whatever I was testing myself on. My notation of my accomplishments was poor, and I was keeping track of what I would practice, not what I was able to do.[^2]
 
 ## The blunder
 
-In these first assessments, I found that I was able to play five scales with hands separate at 60bpm with 8th notes: C major, A major, D melodic minor, G harmonic minor, and D harmonic minor. Five days later I practiced the natural minor scale on the TK, and I found that I was able to play the D natural minor at 60bpm and A natural minor at 76bpm (both 8th notes). This was considerably better than I was able to do the week before. I couldn't play the C Major scale hands together at 60bpm while I could play A natural minor at 76bpm (which has identical fingering). Something was fishy, so I reviewed my notes for the first assessment. This is where the mistakes were made.
+In the first assessment, I found that I was able to play five scales with hands separate at 60bpm with 8th notes: C major, A major, D melodic minor, G harmonic minor, and D harmonic minor. Five days later I did a second assessment. I found that I was able to play the D natural minor at 60bpm and A natural minor at 76bpm (both with 8th notes). It was rather strange because this was much better than I was able in the first assessment. I couldn’t play the C Major scale at 60bpm, but five days later I played the A natural minor scale (that has the same fingering) at 76bpm. I was suspicious of the results, so I reviewed my notes of the first assessment. This is where mistakes were made.
 
-Due to my poor notation, I thought that I had actually played all of the major scales with 16th notes rather than 8th notes, and that I was able to play them with both hands at 60 bpm. This would have explained my leap in improvement between the two assessments.
+Due to my poor notation, I thought that I had actually used 16th notes rather than 8th notes during the first assessment. I also thought that notation indicated that I was able to play major scales with both hands at 60 bpm. This would have explained the results of the second assessment. Instead of a leap in improvement, I thought that I had messed up my initial assessment.
 
-So assuming that I had done the first major scale assessment incorrect, I did a third assessment with 8th notes covering the same content as the first assessment. While playing the scales I gave myself a little bit more time to become familiar with the content.
+I did a third assessment covering the same content as the first assessment, attempting to fix the faulty results of the first assessment. In this third assessment I gave myself a little bit more time to become familiar with the content. 
 
-The results of this experiment sufficiently confused me. I was able to play the C Major scale with 16th notes, and I was able to play four other major scales, two melodic minor scales, and two harmonic minor scales with hands together 8th notes at 60bpm or above. I had performed considerably better than I did on the natural minor scale but it appeared as if I had done substantially worse than the first TK assessment.
+The results of this assessment deepened my confusion. I was able to play the C Major scale with 16th notes at 60bpm. I was also able to play four other major scales, two melodic minor scales, and two harmonic minor scales with hands together 8th notes at 60bpm or above. I had performed better than I did on the second assessment, and it appeared that I had done worse than the first assessment. 
 
-This lead me to do what I should have done the first time I questioned my results: listen to the initial assessments. And thus I discovered that I played with 8th notes in my first assessment.
+This lead me to do what I should have done the first time I questioned my results: listen to the initial assessments. This is when I discovered that I played with 8th notes in my first assessment. 
 
-This still left a question: why did I improve so much between the each assessment?
+This still left a question: why did I improve so much between the each assessment? 
 
 ## A return to form
 
-In the second two practice sessions I took more time become familiar with the material before I assessed myself. Also the impact of a few juicy REM cycles shouldn't be underestimated, but neither of these can fully explain the massive improvement. In around an hour (**CHECK THIS)** of assessing, I had gone from 0 completed increments to 53. In retrospect, I can see that in the next eight hours of practicing scales (over the next 32 practice sessions), I only completed 50 increments.
+In the second and third assessment I took more time become familiar with the material as I assessed myself. Also the impact of a few juicy REM cycles shouldn’t be underestimated, but neither of these can fully explain the massive improvement. In around an hour (**CHECK THIS)** of assessing, I had gone from 0 completed increments to 53\. In the next eight hours of practicing scales (over the next 32 practice sessions), I only completed 50 increments.
 
-I believe that I improved quickly because I was not learning these skills for the first time. Instead it was a return to form, my brain reclaiming my keyboard skills after a year of stagnation. The speed of improvement, although aided by REM cycles and practice, is mostly due to fact that I was not learning these skills but remembering them.
+I believe that I improved rapidly because I was not learning these skills for the first time. Instead it was a return to form, my brain reclaiming my keyboard skills after a year of stagnation. The speed of improvement, although aided by REM cycles and practice, is mostly due to fact that I was not learning these skills but remembering them.
 
-This means my initial assessment might not be nearly as useful as I thought. I did this assessment to get an initial snapshot of how good I am at each keyboard. But if this is any indication, I might continue to improve rapidly on the TK (and possibly the LIK) in the early practice sessions as I return to the level that I was at about a year ago.[^3]
+The implication is this assessment might not be as useful as I thought. I did this to get an initial snapshot of how good I am at each keyboard. But if this is any indication, I might continue to rapidly improve on the TK in the early practice sessions as I return to the level that I was at about a year ago.[^3]
 
-Despite the multitude of mistakes, the initial assessment provided what I wanted and more: it is an snapshot of my initial abilities, and it taught me that the improvement in the early practice sessions could be explosive, and should be taken with a grain of salt.
+Despite the multitude of mistakes, the initial assessment provided what I wanted and more. It is a snapshot of my initial abilities, and it taught me that the improvement in the early practice sessions could be explosive, and should be taken with a grain of salt. 
 
-[^1]: By the time I recorded the second assessment, I was going through the process of removing the metric of playing hands apart at 60bpm. Now the easiest increment for a scale is 60bpm hands together, and I do not assess if I am able to hands apart. I chose this because I figured that I should be practicing hands together whenever possible. If I can't practice hands together then I will play hands apart at my own tempo, before practicing hands together at my own tempo. From there I would increase tempo until I had 60bpm.
+[^1]: By the time I recorded the second assessment, I was going through the process of removing the metric of playing hands apart at 60bpm. Now the easiest increment for a scale is 60bpm hands together, and I do not assess if I am able to hands apart. I chose this because I figured that I should be practicing hands together whenever possible.
 
-[^2]: This meant that if I could play the C major scale at 60bpm, I would notate C major at 63 bpm (the next increment), rather than 60bpm (what I could actually play). I continued making this error in my assessment, keeping track of what I was going to practice rather than what I was able to do. This was fixed post-assessment. When inputting data, I didn't listen to what I said or notated and instead I listened through my assessments a second time through to determine what I was able to do.
+[^2]: This meant that if I could play the C major scale at 60bpm, I would notate C major at 63 bpm (the next increment), rather than 60bpm (what I could actually play). I continued making this error in my assessment, keeping track of what I was going to practice rather than what I was able to do. I fixed this after the assessment.
 
-[^3]: Looking back, it appears I had reclaimed most of my previous skill in the assessment. My improvement on the major scale in the first six practice sessions was minimal. However, it is possible that I see similar bursts in improvement when I initially begin practicing the other minor scales.
+[^3]: Looking back, it appears I had reclaimed most of my previous skill in the assessment. My improvement on the major scale in the first six practice sessions was minimal. However, it is possible that I see similar bursts in improvement when I begin practicing the other minor scales.
 
 <% end %>
